# cmake-learn

./: .gitignore  README.md
example1/: CMakeLists.txt  Makefile  helloworld.cpp
hsfTutorial/one/: CMakeLists.txt
hsfTutorial/three/: CMakeLists.txt  Makefile
hsfTutorial/three/apps/: CMakeLists.txt  app.cpp
hsfTutorial/three/src/: CMakeLists.txt  lib.cpp
hsfTutorial/three/test/: CMakeLists.txt  testlib.cpp
pr0g-examples/: README.md
pr0g-examples/shared/: Makefile
pr0g-examples/shared/application/: CMakeLists.txt
pr0g-examples/static/: Makefile
pr0g-examples/static/application/: CMakeLists.txt
